--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body{
 
 }
 #postQR{
-    min-width: 375px;
+    min-width: 280px;
     background-position-x: center;
     height: 70%;
-    width: 1%;
+    width: 0.1%;
     border-radius: 5%;
     background-color: hsl(0, 0%, 100%);
-    margin-top: 5%;
+    margin-top: 8%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2%;
@@ -29,24 +29,23 @@ body{
 #p1{
     text-align: center;
     background-position-x: center;
-    border:3px hidden white;
-    height: 10%;
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+    border:1px hidden white;
+    font-family: 'Outfit', sans-serif;
     
+    margin-left: 10%;
+    margin-right: 10%;
+    font-size: 120%; 
 }
 #p2{
     padding: 3%;
     text-align: center;
     background-position-x: center;
-    border:3px hidden white;
-    height: 10%;
-    width: 45%;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 70%;
+    border:1px hidden white;
+    font-family: 'Outfit', sans-serif;
+    margin-left: 9%;
+    margin-right: 9%;
+    font-size: 80%;
 }
 
 
-
+ 
